--- a/www/less/forms.less
+++ b/www/less/forms.less
@@ -20,8 +20,13 @@ label.error {
 }
 
 .week-input-container {
-	width: 280px; 
+	width: 235px; 
 	float: left;
+
+	.week-input-label {
+		text-align: right;
+		padding-right: 5px;
+	}
 }
 
 label.tiny-label {
