--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -17,27 +17,30 @@
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title modified" style="overflow:auto;">
-                        <div class="week-input-container">
-                            <label class="control-label tiny-label" for="week_from_input">od</label>
-            				<input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+<div class="week-input-container">
+                            <label class="control-label tiny-label week-input-label" for="week_from_input">od</label>
+                            <input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
                         <div class="week-input-container">
-                            <label class="control-label tiny-label" for="week_to_input">do</label>
+                            <label class="control-label tiny-label week-input-label" for="week_to_input">do</label>
                             <input id="week_to_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                        </div>
+                        <div class="week-input-container">
+                            <label class="control-label tiny-label week-input-label" for="week_one_input">týden</label>
+                            <input id="week_one_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                        </div>
+                        <div class="week-input-container">
+                            <label class="control-label tiny-label week-input-label" for="month_full_input">měsíc</label>
+                            <input id="month_full_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                        </div>
+                        <div class="week-input-container">
+                            <label class="control-label tiny-label week-input-label" for="year_full_input">rok</label>
+                            <input id="year_full_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
                     </div>
                     
                     <div class="ibox-content relative">
-                        <div id="fountainG" class="ajax-loading">
-                            <div id="fountainG_1" class="fountainG"></div>
-                            <div id="fountainG_2" class="fountainG"></div>
-                            <div id="fountainG_3" class="fountainG"></div>
-                            <div id="fountainG_4" class="fountainG"></div>
-                            <div id="fountainG_5" class="fountainG"></div>
-                            <div id="fountainG_6" class="fountainG"></div>
-                            <div id="fountainG_7" class="fountainG"></div>
-                            <div id="fountainG_8" class="fountainG"></div>
-                        </div>
+                        {include ajax-loading}
                         {snippet overviewTable}
                         {if count($centers_distribution) == 0}
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable">
@@ -135,26 +138,108 @@
     <script src="{$basePath}/js/plugins/datapicker/bootstrap-datepicker.js"></script>
     <script src="{$basePath}/js/libs/date-functions.js"></script>
     <script src="{$basePath}/js/libs/week-interval-picker.js"></script>
+    <script src="{$basePath}/js/libs/week-picker.js"></script>
+    <script src="{$basePath}/js/libs/month-picker.js"></script>
+    <script src="{$basePath}/js/libs/year-picker.js"></script>
 
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
             $('#overviewTable').footable();
 
-            var picker = new weekIntervalPicker('#week_from_input', '#week_to_input', {link booksOverview});
-            picker.setFrom({$year_from}, {$week_from});
-            picker.setTo({$year_to}, {$week_to}, {link booksOverview});
-            picker.beforeSend(function() {
-                $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
-            });
-
-            picker.afterReceive(function() {
+            function redrawScoreTable() {
                 $('#overviewTable').footable();
                 $('#overviewTable').hide();
                 $('#overviewTable').fadeIn();
                 $('#fountainG').fadeOut();
+            }
+
+            var week_interval_picker = new weekIntervalPicker('#week_from_input', '#week_to_input', {link booksOverview});
+            week_interval_picker.setFrom({$year_from}, {$week_from});
+            week_interval_picker.setTo({$year_to}, {$week_to});
+            
+            var week_picker = new weekPicker('#week_one_input', {link booksOverviewOneWeek});
+            {if $year_from == $year_to && $week_from == $week_to}
+                week_picker.setWeekPicker({$year_from}, {$week_from});
+            {/if}
+
+            var month_picker = new monthPicker('#month_full_input', {link booksOverview});
+            month_picker.setFrom({$year_from}, {$week_from});
+            month_picker.setTo({$year_to}, {$week_to});
+
+            var year_picker = new yearPicker('#year_full_input', {link booksOverview});
+            year_picker.setFrom({$year_from}, {$week_from});
+            year_picker.setTo({$year_to}, {$week_to});
+
+            week_interval_picker.beforeSend(function() {
+                $('#overviewTable').fadeOut();   
+                $('#fountainG').fadeIn();
+                if(week_interval_picker.getWeekFrom() == week_interval_picker.getWeekTo() && 
+                   week_interval_picker.getYearFrom() == week_interval_picker.getYearTo()) {
+                   week_picker.setWeekPicker(week_interval_picker.getYearFrom(), week_interval_picker.getWeekFrom());
+                }
+                else {
+                    week_picker.clear();
+                }
+
+                month_picker.setFrom(week_interval_picker.getYearFrom(), week_interval_picker.getWeekFrom());
+                month_picker.setTo(week_interval_picker.getYearTo(), week_interval_picker.getWeekTo());
+                month_picker.redraw();
+
+                year_picker.setFrom(week_interval_picker.getYearFrom(), week_interval_picker.getWeekFrom());
+                year_picker.setTo(week_interval_picker.getYearTo(), week_interval_picker.getWeekTo());
+                year_picker.redraw();
             });
+
+            week_interval_picker.afterReceive(function() {
+                redrawScoreTable();
+            });
+
+            
+            week_picker.beforeSend(function() {
+                $('#overviewTable').fadeOut();   
+                $('#fountainG').fadeIn();
+                week_interval_picker.setFrom(week_picker.getYear(), week_picker.getWeek());
+                week_interval_picker.setTo(week_picker.getYear(), week_picker.getWeek());
+                month_picker.clear();
+                year_picker.clear();
+            });
+
+            week_picker.afterReceive(function() {
+                redrawScoreTable();
+            });
+
+
+            month_picker.beforeSend(function() {
+                $('#overviewTable').fadeOut();   
+                $('#fountainG').fadeIn();
+                week_interval_picker.setFrom(month_picker.getYearFrom(), month_picker.getWeekFrom());
+                week_interval_picker.setTo(month_picker.getYearTo(), month_picker.getWeekTo());
+                week_picker.clear();
+                year_picker.clear();
+            });
+
+            month_picker.afterReceive(function() {
+                redrawScoreTable();
+            });
+
+            month_picker.redraw();
+
+            year_picker.beforeSend(function() {
+                $('#overviewTable').fadeOut();   
+                $('#fountainG').fadeIn();
+                week_interval_picker.setFrom(year_picker.getYearFrom(), year_picker.getWeekFrom());
+                week_interval_picker.setTo(year_picker.getYearTo(), year_picker.getWeekTo());
+                week_picker.clear();
+                month_picker.clear();
+            });
+
+            year_picker.afterReceive(function() {
+                redrawScoreTable();
+            });
+
+            
+            year_picker.redraw();
         });
     </script>
 {/block}
