--- a/www/css/style.css
+++ b/www/css/style.css
@@ -275,8 +275,12 @@ label.error {
   margin-bottom: 0px;
 }
 .week-input-container {
-  width: 280px;
+  width: 235px;
   float: left;
+}
+.week-input-container .week-input-label {
+  text-align: right;
+  padding-right: 5px;
 }
 label.tiny-label {
   width: 41px;
@@ -433,7 +437,7 @@ tr.footable-detail-row .result-detail tr td {
   float: left;
   height: 30px;
   margin-left: 5px;
-  width: 200px;
+  width: 175px;
 }
 .ibox-title.modified {
   padding-top: 10px;
