--- a/app/templates/Result/wsn.latte
+++ b/app/templates/Result/wsn.latte
@@ -1,9 +1,5 @@
-{block content}
-{php 
-    function mb_str_pad($input,  $pad_length, $pad_string=" ", $pad_style=STR_PAD_RIGHT, $encoding="UTF-8") {
-        return str_pad($input, strlen($input)-mb_strlen($input,$encoding)+$pad_length, $pad_string, $pad_style);
-    }
-}
+{layout none}
+<title>{$year} Week {$week_from} - {$week_to} ({$timestamp_from|date: 'd.m.y'} - {$timestamp_to|date: 'd.m.y'})</title>
 <style>
     .wsn_scores {
         font-family: monospace;
@@ -14,66 +10,49 @@
 Scores for {$center->title|webalize, " ", false}<br />
 {$year} Week {$week_from} - {$week_to} ({$timestamp_from|date: 'd.m.y'} - {$timestamp_to|date: 'd.m.y'})<br />
 <br />
-{php echo str_replace('~', '.', str_pad("Name", $names_pad_right, '~'))}
-{php echo str_replace('~', '.', str_pad("Points", $allsum_points_ceil_length, '~', STR_PAD_LEFT))}
-{if isset($category_sum_distribution['Mag'])}
-    {php echo str_replace('~', '.', str_pad("M1", $category_sum_distribution['Mag']['length'], '~', STR_PAD_LEFT))}
-{else}
-    M1
-{/if}
-{if isset($category_sum_distribution['Small'])}
-    {php echo str_replace('~', '.', str_pad("H1", $category_sum_distribution['Small']['length'], '~', STR_PAD_LEFT))}
-{else}
-    H1
-{/if}
-{if isset($category_sum_distribution['Medium'])}
-    {php echo str_replace('~', '.', str_pad("H2", $category_sum_distribution['Medium']['length'], '~', STR_PAD_LEFT))}
-{else}
-    H2
-{/if}
-{php echo str_pad("H3", 3, " "); }
-{php echo str_pad("H4", 3, " "); }<br />
-{php echo str_repeat("-", $names_pad_right + $allsum_points_ceil_length)}<br />
+{var $points_title = "Points"}
+{var $names_title = "Name"}
+{var $mag_title = "M1"}
+{var $small_title = "H1"}
+{var $medium_title = "H2"}
+{var $big_title = "H3"}
+{var $maha_title = "H4"}
+
+{!$names_title|padRightEx, $names_pad_right}
+{!$points_title|padLeftEx, $allsum_points_ceil_length}
+{!$mag_title|padLeftEx,  $category_sum_distribution['Mag']['length']}
+{!$small_title|padLeftEx,  $category_sum_distribution['Small']['length']}
+{!$medium_title|padLeftEx,  $category_sum_distribution['Medium']['length']}
+{!$big_title|padLeftEx,  $category_sum_distribution['Big']['length']}
+{!$maha_title|padLeftEx,  $category_sum_distribution['Mahá']['length']}
+<br />
+{php echo str_repeat("-", $names_pad_right + $allsum_points_ceil_length + $category_sum_distribution['Mag']['length'] +$category_sum_distribution['Small']['length'] + $category_sum_distribution['Medium']['length'] + $category_sum_distribution['Big']['length'] + $category_sum_distribution['Mahá']['length'] + 6)}&nbsp;<br />
 
 {foreach $book_points as $person_id => $sum_points}
     {var $distribution = $category_distribution[$person_id]}
     
     {if $persons[$person_id]->name == "﻿﻿﻿﻿﻿﻿Muktakeśa dās"}
-        {!$persons[$person_id]->name|padRightEx: $names_pad_right + 6}
+        {!$persons[$person_id]->name|webalize, " ()", false|replace: ["devi dasi", "das"], ["dd", "d"]|padRightEx: $names_pad_right + 6} {* ??? *}
     {else}
-        {!$persons[$person_id]->name|padRightEx: $names_pad_right}
+        {!$persons[$person_id]->name|webalize:" ()", false|replace: ["devi dasi", "das"], ["dd", "d"]|padRightEx: $names_pad_right}
     {/if}
 
-    {$sum_points|number:0, ".", ""|padLeftEx: $allsum_points_ceil_length}
+    {!$sum_points|number:0, ".", ""|padLeftEx: $allsum_points_ceil_length}
 
-    {if isset($category_sum_distribution['Mag'])}
-        {isset($distribution['Mag']) ? $distribution['Mag']|padLeftEx, $category_sum_distribution['Mag']['length'], '.'}
-    {else}
-        ..
-    {/if}
-
-    {if isset($category_sum_distribution['Small'])}
-        {isset($distribution['Small']) ? $distribution['Small']|padLeftEx, $category_sum_distribution['Small']['length'], '.'}
-    {else}
-        ..
-    {/if}
-
-    {if isset($category_sum_distribution['Medium'])}
-        {isset($distribution['Medium']) ? $distribution['Medium']|padLeftEx, $category_sum_distribution['Medium']['length'], '.'}
-    {else}
-        ..
-    {/if}
-
-    {*{isset($distribution['Small']) ? $distribution['Small']|padLeft, 2, '.'}{isset($distribution['Medium']) ? $distribution['Medium']|padLeft, 2, '.'}{isset($distribution['Big']) ? $distribution['Big']|padLeft, 5, '.'}{isset($distribution['Mahá']) ? $distribution['Mahá']|padLeft, 3, '.'}*}
+    {isset($distribution['Mag']) ? $distribution['Mag']|padLeftEx, $category_sum_distribution['Mag']['length']|noescape}
+    {isset($distribution['Small']) ? $distribution['Small']|padLeftEx, $category_sum_distribution['Small']['length']|noescape}
+    {isset($distribution['Medium']) ? $distribution['Medium']|padLeftEx, $category_sum_distribution['Medium']['length']|noescape}
+    {isset($distribution['Big']) ? $distribution['Big']|padLeftEx, $category_sum_distribution['Big']['length']|noescape}
+    {isset($distribution['Mahá']) ? $distribution['Mahá']|padLeftEx, $category_sum_distribution['Mahá']['length']|noescape}
     <br />
 {/foreach}
-{php echo str_repeat("-", $names_pad_right + $allsum_points_ceil_length)}<br />
+{php echo str_repeat("-", $names_pad_right + $allsum_points_ceil_length + $category_sum_distribution['Mag']['length'] +$category_sum_distribution['Small']['length'] + $category_sum_distribution['Medium']['length'] + $category_sum_distribution['Big']['length'] + $category_sum_distribution['Mahá']['length'] + 6)}&nbsp;<br />
 Total
-{$allsum_points_ceil|padLeftEx: $names_pad_right + 1}
-{if isset($category_sum_distribution['Mag'])}{$category_sum_distribution['Mag']['number']|padLeftEx, 2, '.'}{else}..{/if}
-{if isset($category_sum_distribution['Small'])}{$category_sum_distribution['Small']['number']|padLeftEx, 2, '.'}{else}..{/if}
-{if isset($category_sum_distribution['Medium'])}{$category_sum_distribution['Medium']['number']|padLeftEx, 2, '.'}{else}.{/if}
-{if isset($category_sum_distribution['Big'])}{$category_sum_distribution['Big']['number']}{else}.{/if}
-{if isset($category_sum_distribution['Mahá'])}{$category_sum_distribution['Mahá']['number']}{else}.{/if}
+{if $allsum_points_ceil != 0}{$allsum_points_ceil|padLeftEx: $names_pad_right + 1|noescape}{else}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{/if}
+{if $category_sum_distribution['Mag']['number'] != 0}{$category_sum_distribution['Mag']['number']|padLeftEx, 2|noescape}{else}&nbsp;&nbsp;{/if}
+{if $category_sum_distribution['Small']['number'] != 0}{$category_sum_distribution['Small']['number']|padLeftEx, 2|noescape}{else}&nbsp;&nbsp;{/if}
+{if $category_sum_distribution['Medium']['number'] != 0}{$category_sum_distribution['Medium']['number']|padLeftEx, 2|noescape}{else}&nbsp;&nbsp;{/if}
+{if $category_sum_distribution['Big']['number'] != 0}{$category_sum_distribution['Big']['number']|noescape}{else}&nbsp;&nbsp;{/if}
+{if $category_sum_distribution['Mahá']['number'] != 0}{$category_sum_distribution['Mahá']['number']|noescape}{else}&nbsp;&nbsp;{/if}
+<br /><br /><br />
 </div>
-{/block}
