--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -161,14 +161,9 @@
 </html>
 
 {define ajax-loading}
-<div id="fountainG" class="ajax-loading">
-    <div id="fountainG_1" class="fountainG"></div>
-    <div id="fountainG_2" class="fountainG"></div>
-    <div id="fountainG_3" class="fountainG"></div>
-    <div id="fountainG_4" class="fountainG"></div>
-    <div id="fountainG_5" class="fountainG"></div>
-    <div id="fountainG_6" class="fountainG"></div>
-    <div id="fountainG_7" class="fountainG"></div>
-    <div id="fountainG_8" class="fountainG"></div>
+<div id="main_loading" class="sk-spinner sk-spinner-three-bounce main-spinner">
+    <div class="sk-bounce1"></div>
+    <div class="sk-bounce2"></div>
+    <div class="sk-bounce3"></div>
 </div>
 {/define}
