--- a/www/less/list.less
+++ b/www/less/list.less
@@ -39,12 +39,18 @@
 			width: 75px !important;
 		}
 
+		th.th-smaller {
+			width: 65px !important;
+		}
+
 		th.thin {
 			width: 10px;
 		}
-
-		th span.footable-sort-indicator {
-			display: inline !important;
+		
+		tr.footable-filtering .form-inline{
+			.form-group > select {
+				margin-top: -5px;
+			}
 		}
 	}
 
