--- a/www/less/result.less
+++ b/www/less/result.less
@@ -61,7 +61,7 @@
 }
 
 .score-table {
-	th.center {
+	th.th-center {
 		width: 200px;	
 	}
 	
@@ -70,9 +70,14 @@
 	}
 
 	th.center-title {
-		width: 100px;
+		width: 70px;
 	}
 
+	tbody {
+		td.footable-first-visible {
+			cursor: pointer;
+		}
+	}
 	td.empty {
 		font-size: 14px;
 		text-align: center;
@@ -86,7 +91,7 @@
 		display: none;
 	}
 
-	.footable-row-detail-cell {
+	.footable-detail-row {
 		.submit {
 			width: 200px;
 			margin-left: 15px;
