--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -13,7 +13,8 @@
                 <div class="ibox-title empty">
                 </div>
                 <div class="ibox-content">
-                    <table class="table table-striped table-bordered table-hover" id="personsTable">
+                    {include ajax-loading}
+                    <table class="table table-striped table-bordered table-hover" id="personsTable" style="display: none;">
                         <thead>
                             <tr>
                                 <th class="wide noselect">Jméno</th>
@@ -24,7 +25,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr n:foreach="$records as $record" data-id="{$record->id}">
+                            <tr n:foreach="$records as $record" data-id="{$record->id}" data-expand-url="{link expandRow, $record->id}">
                                 <td data-sort-value="{$record->name|webalize}">{$record->name}</td>
                                 <td data-sort-value="{$record->center->title|webalize}">{$record->center->title}</td>
                                 <td data-sort-value="{$record->active}">
@@ -69,6 +70,7 @@
     <script> 
         $(document).ready(function() {
             initFooTable('#personsTable', "Osoba byla smazána.", "Nelze smazat osobu dokud má přiřazené výsledky.");
+            $('#main_loading').fadeOut();
         });
 
         function change_person_activity(person_id, active) {
