--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -1,23 +1,18 @@
 {layout 'layout.latte'}
 {block head}
-    <!-- Data Tables -->
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.responsive.css" rel="stylesheet">
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.tableTools.min.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     
     <!-- FooTable -->
-    <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/footable/footable.bootstrap.min.css" rel="stylesheet">
 
     <link href="{$basePath}/css/week-picker.css" rel="stylesheet">
-    <link href="{$basePath}/css/scoretable-print.css" rel="stylesheet" media="print">
 {/block}
 {block content}
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
-                    <div class="ibox-title modified" style="overflow:auto;">
-<div class="week-input-container">
+                    <div class="ibox-title modified">
+                        <div class="week-input-container">
                             <label class="control-label tiny-label week-input-label" for="week_from_input">od</label>
                             <input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
@@ -43,7 +38,7 @@
                         {include ajax-loading}
                         {snippet overviewTable}
                         {if count($centers_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" style="display: none">
                             <thead>
                                 <tr>
                                     <th class="wide noselect" data-sort-ignore="true">Titul</th>
@@ -59,59 +54,40 @@
                             </tbody>
                         </table>
                         {else}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" style="display: none">
                             <thead>
                                 <tr>
-                                    <th class="wide noselect">Titul</th>
-                                    <th class="wide noselect">Kategorie</th>
-                                    <th class="center-title" data-type="numeric" n:foreach="$centers as $center" title="{$center->title}">{$center->abbreviation}</th>
-                                    <th class="noselect" data-type="numeric">Celkem</th>
-                                    <th data-hide="all"></th>
+                                    <th class="noselect">Titul</th>
+                                    <th class="noselect" data-name="category" data-filterable="false">Kategorie</th>
+                                    <th n:foreach="$centers as $center" class="center-title" data-type="numeric" data-filterable="false" title="{$center->title}">{$center->abbreviation}</th>
+                                    <th class="th-small noselect" data-type="numeric" data-sorted="true" data-direction="DESC" data-filterable="false">Celkem</th>
+                                    <th data-breakpoints="all" data-filterable="false"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr n:foreach="$books as $book" n:if="isset($centers_distribution[$book->id])" id="book-{$book->id}">
+                                <tr n:foreach="$books as $book" n:if="isset($centers_distribution[$book->id])" id="book-{$book->id}" data-expand-url="{link expandBookOverviewRow, $book->id}">
                                     <td>{$book->title}</td>
-                                    <td>{$book->category->title}</td>
-                                    <td n:foreach="$centers as $center">{isset($centers_distribution[$book->id][$center->id]) ? $centers_distribution[$book->id][$center->id] : "."}</td>
-                                    <td>{isset($books_sum_distribution[$book->id]) ? $books_sum_distribution[$book->id] : "."}</td>
-                                    <td style="display: none">
-                                    {form personResultsForm-$book->id}
-                                        <div class="panel-body">
-                                            <div class="panel-group" id="accordion-{$book->id}">
-                                                {foreach $centers as $center}
-                                                {continueIf empty($centers_distribution[$book->id][$center->id])}
-                                                <div class="panel panel-default float">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$center->id}" href="#collapseCenter-{$center->id}">{$center->title}</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseCenter-{$center->id}" class="panel-collapse collapse in">
-                                                        <div class="panel-body">
-	                                                        <table class="result-detail">
-                                                            {if isset($book_distribution[$book->id][$center->id])}
-                                                            {foreach $book_distribution[$book->id][$center->id] as $person_distribution}
-                                                                {var $person = $persons[$person_distribution['person_id']]}
-                                                                <tr><th>{$person->name}</th><td>{$person_distribution['quantity']}</td></tr>
-                                                            {/foreach}
-                                                            </table>
-                                                            {/if}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                {/foreach}
-                                            </div>
-                                        </div>
-                                    {/form}
-                                    </td>
+                                    <td data-filter-value="{$book->category->id}">{$book->category->title}</td>
+                                    {foreach $centers as $center}
+                                        {if isset($centers_distribution[$book->id][$center->id])}
+                                            <td class="center" data-sort-value="{$centers_distribution[$book->id][$center->id]}">{$centers_distribution[$book->id][$center->id]}</td>
+                                        {else}
+                                            <td class="center" data-sort-value="0">.</td>
+                                        {/if}
+                                    {/foreach}
+                                    {if isset($books_sum_distribution[$book->id])}
+                                        <td class="center" data-sort-value="{$books_sum_distribution[$book->id]}">{$books_sum_distribution[$book->id]}</td>
+                                    {else}
+                                        <td class="center" data-sort-value="0">0</td>
+                                    {/if}
+                                    <td></td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <td colspan="2">TOTAL</td>
-                                    <td n:foreach="$centers as $center">{isset($centers_sum_distribution[$center->id]) ? $centers_sum_distribution[$center->id] : "0"}</td>
-                                    <td>{$allsum_books}</td>
+                                    <td class="center bold" n:foreach="$centers as $center">{if isset($centers_sum_distribution[$center->id])}{$centers_sum_distribution[$center->id]|number:0:'.':' '}{else}0{/if}</td>
+                                    <td class="center bold">{$allsum_books|number:0:'.':' '}</td>
                                 </tr>
                             </tfoot>
                         </table>
@@ -125,14 +101,8 @@
 {block scripts}
     <script src="{$basePath}/js/plugins/jeditable/jquery.jeditable.js"></script>
 
-    <!-- Data Tables -->
-    <script src="{$basePath}/js/plugins/dataTables/jquery.dataTables.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.bootstrap.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.responsive.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.tableTools.min.js"></script>
-
     <!-- FooTable -->
-    <script src="{$basePath}/js/plugins/footable/footable.js"></script>
+    <script src="{$basePath}/js/plugins/footable2/footable.min.js"></script>    
 
     <!-- Date & Week picker -->
     <script src="{$basePath}/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -145,13 +115,19 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
-            $('#overviewTable').footable();
+            
+            // nefunguje filt na Mahá kategorii
+            FooTable.CategoriesFiltering = createFooTableFilter('category', 'Všechny kategorie', {php echo json_encode($categories)});
+            FooTable.components.register('filtering', FooTable.CategoriesFiltering);
+
+            initFooTable('#overviewTable');
+            $('#main_loading').fadeOut();
 
             function redrawScoreTable() {
-                $('#overviewTable').footable();
+                initFooTable('#overviewTable');
                 $('#overviewTable').hide();
                 $('#overviewTable').fadeIn();
-                $('#fountainG').fadeOut();
+                $('#main_loading').fadeOut();
             }
 
             var week_interval_picker = new weekIntervalPicker('#week_from_input', '#week_to_input', {link booksOverview});
@@ -173,7 +149,7 @@
 
             week_interval_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 if(week_interval_picker.getWeekFrom() == week_interval_picker.getWeekTo() && 
                    week_interval_picker.getYearFrom() == week_interval_picker.getYearTo()) {
                    week_picker.setWeekPicker(week_interval_picker.getYearFrom(), week_interval_picker.getWeekFrom());
@@ -198,7 +174,7 @@
             
             week_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(week_picker.getYear(), week_picker.getWeek());
                 week_interval_picker.setTo(week_picker.getYear(), week_picker.getWeek());
                 month_picker.clear();
@@ -212,7 +188,7 @@
 
             month_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(month_picker.getYearFrom(), month_picker.getWeekFrom());
                 week_interval_picker.setTo(month_picker.getYearTo(), month_picker.getWeekTo());
                 week_picker.clear();
@@ -223,11 +199,10 @@
                 redrawScoreTable();
             });
 
-            month_picker.redraw();
 
             year_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(year_picker.getYearFrom(), year_picker.getWeekFrom());
                 week_interval_picker.setTo(year_picker.getYearTo(), year_picker.getWeekTo());
                 week_picker.clear();
@@ -239,7 +214,7 @@
             });
 
             
-            year_picker.redraw();
+            
         });
     </script>
 {/block}
