--- a/app/templates/Result/personsOverview.latte
+++ b/app/templates/Result/personsOverview.latte
@@ -7,7 +7,7 @@
     <link href="{$basePath}/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     
     <!-- FooTable -->
-    <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/footable/footable.bootstrap.min.css" rel="stylesheet">
 
     <link href="{$basePath}/css/week-picker.css" rel="stylesheet">
     <link href="{$basePath}/css/scoretable-print.css?v=1.0" rel="stylesheet" media="print">
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
-                    <div class="ibox-title modified" style="overflow:auto;">
+                    <div class="ibox-title modified">
                         <div class="week-input-container">
                             <label class="control-label tiny-label week-input-label" for="week_from_input">od</label>
             				<input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
@@ -38,12 +38,12 @@
                             <input id="year_full_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         </div>
                     </div>
-                    
-                    <div class="ibox-content relative" style="min-height: 200px;">
+
+                    <div class="ibox-content relative">
                         {include ajax-loading}
                         {snippet overviewTable}
                         {if count($category_distribution) == 0}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table empty" id="overviewTable">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table empty" id="overviewTable" style="display: none">
                             <thead>
                                 <tr>
                                     <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
@@ -58,83 +58,44 @@
                                     <th class="noselect category" data-sort-ignore="true">Body</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="empty" colspan="10">V tomto období nejsou žádné výsledky</td>
-                                </tr>
-                            </tbody>
                         </table>
                         {else}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="99999999999">
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" style="display: none">
                             <thead>
+                              
                                 <tr>
-                                    <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
-                                    <th class="wide noselect">Jméno</th>
-                                    <th class="noselect">Centrum</th>
-                                    <th class="noselect numeric thin" data-type="numeric" data-sort-ignore="true">Wk</th>
-                                    <th class="noselect category" data-type="numeric">Mahá</th>
-                                    <th class="noselect category" data-type="numeric">Big</th>
-                                    <th class="noselect category" data-type="numeric">Medium</th>
-                                    <th class="noselect category" data-type="numeric">Small</th>
-                                    <th class="noselect category" data-type="numeric">Mag</th>
-                                    <th class="noselect category" data-type="numeric" data-sort-initial="descending">Body</th>
-                                    <th data-hide="all"></th>
+                                    <th class="noselect th-smaller" data-filterable="false"></th>
+                                    <th class="noselect">Jméno</th>
+                                    <th class="noselect th-center" data-name="center" data-filterable="false">Centrum</th>
+                                    <th class="noselect numeric thin" data-type="numeric" data-filterable="false">Wk</th>
+                                    <th class="noselect category" data-type="numeric" data-filterable="false">Mahá</th>
+                                    <th class="noselect category" data-type="numeric" data-filterable="false">Big</th>
+                                    <th class="noselect category" data-type="numeric" data-filterable="false">Medium</th>
+                                    <th class="noselect category" data-type="numeric" data-filterable="false">Small</th>
+                                    <th class="noselect category" data-type="numeric" data-filterable="false">Mag</th>
+                                    <th class="noselect category" data-type="numeric" data-sorted="true" data-direction="DESC" data-filterable="false">Body</th>
+                                    <th data-breakpoints="all" data-filterable="false"></th>
                                 </tr>
+                            
                             </thead>
                             <tbody>
-                                <tr n:foreach="$persons as $person" n:if="isset($category_distribution[$person->id])" id="person-{$person->id}">
+                                <tr n:foreach="$persons as $person" n:if="isset($category_distribution[$person->id])" id="person-{$person->id}" data-expand-url="{link expandPersonOverviewRow, $person->id}">
                                     {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
-                                    <td>1</td>
+                                    {if isset($persons_rank[$person->id])}
+                                        <td data-sort-value="{$persons_rank[$person->id]}">{$persons_rank[$person->id]}</td>
+                                    {else}
+                                        <td data-sort-value="999999999"></td>
+                                    {/if}
                                     <td>{$person->name}</td>
-                                    <td>{$distribution['center']}</td>
+                                    <td data-filter-value="{$distribution['center_id']}">{$distribution['center_title']}</td>
                                     <td data-category="wk" class="center">{isset($weeks_distribution[$person->id]) ? $weeks_distribution[$person->id] : "."}</td>
                                     <td data-category="maha" class="center">{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
-                                    <td data-category="big" data-value="{isset($distribution['Big']) ? $distribution['Big'] : '0'}" class="center">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
+                                    <td data-category="big" class="center">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
                                     <td data-category="medium" class="center">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
                                     <td data-category="small" class="center">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
                                     <td data-category="mag" class="center">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
                                     <td data-category="points" data-value="{$book_points[$person->id]}" class="center sum-points"{if isset($book_points[$person->id])} title="{$book_points[$person->id]}">{$book_points[$person->id]|number:0}{else}>.{/if}</td>
-                                    <td style="display: none">
-                                    {form personResultsForm-$person->id}
-                                        <div class="panel-body">
-                                            <div class="panel-group" id="accordion-{$person->id}">
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id}" href="#collapseOne-{$person->id}">Hlavní knihy</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseOne-{$person->id}" class="panel-collapse collapse in">
-                                                        <div class="panel-body">
-                                                            {foreach $primary_books as $book}
-                                                            <table class="result-detail">
-                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
-                                                            </table>
-                                                            {/foreach}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id} " href="#collapseTwo-{$person->id}">Vedlejší knihy</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseTwo-{$person->id}" class="panel-collapse collapse">
-                                                        <div class="panel-body">
-                                                            {foreach $secondary_books as $book}
-                                                            <table class="result-detail">
-                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
-                                                            </table>
-                                                            {/foreach}
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                    {/form}
-                                    </td>
+                                    <td></td>
                                 </tr>
                             </tbody>
                             <tfoot>
@@ -166,14 +127,8 @@
 {block scripts}
     <script src="{$basePath}/js/plugins/jeditable/jquery.jeditable.js"></script>
 
-    <!-- Data Tables -->
-    <script src="{$basePath}/js/plugins/dataTables/jquery.dataTables.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.bootstrap.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.responsive.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.tableTools.min.js"></script>
-
     <!-- FooTable -->
-    <script src="{$basePath}/js/plugins/footable/footable.js"></script>
+    <script src="{$basePath}/js/plugins/footable2/footable.min.js"></script>    
 
     <!-- Date & Week picker -->
     <script src="{$basePath}/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -186,14 +141,17 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
-            $('#overviewTable').footable();
+            FooTable.CentersFiltering = createFooTableFilter('center', 'Všechna centra', {php echo json_encode($centers)});
+            FooTable.components.register('filtering', FooTable.CentersFiltering);
+            
+            initFooTable('#overviewTable');
+            $('#main_loading').fadeOut();
 
             function redrawScoreTable() {
-                $('#overviewTable').footable();
+                initFooTable('#overviewTable');
                 $('#overviewTable').hide();
-                generateScoreTableOrder('#overviewTable:not(.empty)', 10);
                 $('#overviewTable').fadeIn();
-                $('#fountainG').fadeOut();
+                $('#main_loading').fadeOut();
             }
 
             var week_interval_picker = new weekIntervalPicker('#week_from_input', '#week_to_input', {link personsOverview});
@@ -215,7 +173,7 @@
 
             week_interval_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 if(week_interval_picker.getWeekFrom() == week_interval_picker.getWeekTo() && 
                     week_interval_picker.getYearFrom() == week_interval_picker.getYearTo()) {
                     week_picker.setWeekPicker(week_interval_picker.getYearFrom(), week_interval_picker.getWeekFrom());
@@ -238,7 +196,7 @@
             
             week_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(week_picker.getYear(), week_picker.getWeek());
                 week_interval_picker.setTo(week_picker.getYear(), week_picker.getWeek());
                 month_picker.clear();
@@ -251,7 +209,7 @@
 
             month_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(month_picker.getYearFrom(), month_picker.getWeekFrom());
                 week_interval_picker.setTo(month_picker.getYearTo(), month_picker.getWeekTo());
                 week_picker.clear();
@@ -264,7 +222,7 @@
 
             year_picker.beforeSend(function() {
                 $('#overviewTable').fadeOut();   
-                $('#fountainG').fadeIn();
+                $('#main_loading').fadeIn();
                 week_interval_picker.setFrom(year_picker.getYearFrom(), year_picker.getWeekFrom());
                 week_interval_picker.setTo(year_picker.getYearTo(), year_picker.getWeekTo());
                 week_picker.clear();
@@ -274,8 +232,6 @@
             year_picker.afterReceive(function() {
                 redrawScoreTable();
             });
-
-            generateScoreTableOrder('#overviewTable:not(.empty)', 10);
         });
     </script>
 {/block}
