--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -1,149 +1,77 @@
 {layout 'layout.latte'}
 {block head}
     <!-- Data Tables -->
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.responsive.css" rel="stylesheet">
-    <link href="{$basePath}/css/plugins/dataTables/dataTables.tableTools.min.css" rel="stylesheet">
     <link href="{$basePath}/css/plugins/datapicker/datepicker3.css" rel="stylesheet">
     
     <!-- FooTable -->
-    <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/footable/footable.bootstrap.min.css" rel="stylesheet">
 
     <link href="{$basePath}/css/week-picker.css" rel="stylesheet">
 {/block}
 {block content}
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="ibox float-e-margins">
-                    <div class="ibox-title modified">
-        				<input id="week_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
-                        {*
-                        <div class="ibox-tools">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                                <i class="fa fa-wrench"></i>
-                            </a>
-                            <ul class="dropdown-menu dropdown-form">
-                                <li>
-                                {snippet personForm}
-                                    {form personForm}
-                                        {label name /}
-                                        {input name, autocomplete => "off"}
-                                        {input send, class => "btn btn-primary"}
-                                    {/form}
-                                {/snippet}
-                                </li>
-                            </ul>
-                        </div>
-                        *}
-                    </div>
-                    <div class="ibox-content relative" style="min-height: 200px;" n:snippet="resultsTable">
-                        {include ajax-loading}
-                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="resultsTable" data-page-size="9999999999999" >
-                            <thead>
-                                <tr>
-	                                <th class="noselect" data-sort-ignore="true" data-sorted="false"></th>
-                                    <th class="noselect">Jméno</th>
-                                    <th class="noselect center">Centrum</th>
-                                    <th class="noselect category" data-type="numeric">Mahá</th>
-                                    <th class="noselect category" data-type="numeric">Big</th>
-                                    <th class="noselect category" data-type="numeric">Medium</th>
-                                    <th class="noselect category" data-type="numeric">Small</th>
-                                    <th class="noselect category" data-type="numeric">Mag</th>
-                                    <th class="noselect category" data-type="numeric" data-sort-initial="descending">Body</th>
-                                    <th data-hide="all"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr n:foreach="$persons as $person" id="person-{$person->id}">
-                                    {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
-                                    {continueIf $person->active == 0 && $distribution == null}
-                                    <td></td>
-                                    <td>{$person->name}</td>
-                                    <td data-value="{$person->center->title}">
-	                                    {if $user->isInRole('superadmin')}
-	                                    <select n:inner-foreach="$centers as $center_id => $center_title" name="center_id[{$person->id}]">
-	                                    	<option value="{$center_id}"{if $distribution && $center_id == $distribution['center_id']} selected{elseif $center_id == $person->center_id} selected{/if}>{$center_title}</option>
-										</select>
-										{else}
-											{$person->center->title}
-										{/if}
-	                                </td>
-                                    <td data-category="maha">{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
-                                    <td data-category="big">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
-                                    <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
-                                    <td data-category="small">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
-                                    <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
-                                    <td data-category="points" data-value="{isset($book_points[$person->id]) ? $book_points[$person->id] : 'null'}">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
-                                    <td style="display: none">
-                                    {form personResultsForm-$person->id, data-person_id => $person->id}
-                                        <div class="panel-body">
-                                            <div class="panel-group" id="accordion-{$person->id}">
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id}" href="#collapseOne-{$person->id}">Hlavní knihy</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseOne-{$person->id}" class="panel-collapse collapse in">
-                                                        <div class="panel-body">
-                                                            <table class="result-detail">
-                                                            {foreach $primary_books as $book}
-                                                                <tr><th><label n:name="results-$book->book_id">{$book->book->title}{if $book->book->title != $book->book->category->title} ({$book->book->category->title}){/if}</label></th><td>{input results-$book->book_id}</td></tr>
-                                                            {/foreach}
-                                                            </table>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id} " href="#collapseTwo-{$person->id}">Vedlejší knihy</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseTwo-{$person->id}" class="panel-collapse collapse">
-                                                        <div class="panel-body">
-                                                            <table class="result-detail">
-                                                            {foreach $secondary_books as $book}
-                                                                <tr><th>{label results-$book->book_id /}</th><td>{input results-$book->book_id}</td></tr>
-                                                            {/foreach}
-                                                            </table>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                                        </div>
-                                        {input person_id}{input save, class => "btn btn-primary submit"}
-                                    {/form}
-                                    </td>
-                                </tr>
-                            </tbody>
-                            {*
-                            <tfoot>
-                                <tr>
-                                    <td colspan="7">
-                                        <ul class="pagination pull-right"></ul>
-                                    </td>
-                                </tr>
-                            </tfoot>
-                            *}
-                        </table>
-                    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="ibox float-e-margins">
+                <div class="ibox-title modified">
+    				<input id="week_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                </div>
+                <div class="ibox-content relative" n:snippet="resultsTable">
+                    {include ajax-loading}
+                    <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" style="display:none;" id="resultsTable">
+                        <thead>
+                            <tr>
+                                <th class="noselect th-smaller" data-filterable="false"></th>
+                                <th class="noselect">Jméno</th>
+                                <th class="noselect th-center" data-type="html" data-name="center" data-filterable="false">Centrum</th>
+                                <th class="noselect category" data-type="numeric" data-filterable="false">Mahá</th>
+                                <th class="noselect category" data-type="numeric" data-filterable="false">Big</th>
+                                <th class="noselect category" data-type="numeric" data-filterable="false">Medium</th>
+                                <th class="noselect category" data-type="numeric" data-filterable="false">Small</th>
+                                <th class="noselect category" data-type="numeric" data-filterable="false">Mag</th>
+                                <th class="noselect category" data-type="numeric" data-sorted="true" data-direction="DESC" data-filterable="false">Body</th>
+                                <th data-breakpoints="all" data-filterable="false"></th>
+                            </tr>
+                        </thead>
+                        <tbody n:inner-foreach="$persons as $person">
+                            {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
+                            {continueIf $person->active == 0 && $distribution == null}
+
+                            <tr id="person-{$person->id}" data-expand-url="{link expandResultsRow, $person->id}">
+                                {if isset($persons_rank[$person->id])}
+                                    <td data-sort-value="{$persons_rank[$person->id]}">{$persons_rank[$person->id]}</td>
+                                {else}
+                                    <td data-sort-value="999999999"></td>
+                                {/if}
+                                <td data-filter-value="{$person->name|webalize: " ", false}">{$person->name}</td>
+                                <td data-sort-value="{$person->center->title|webalize}" data-filter-value="{$person->center->id}">
+                                    {if $user->isInRole('superadmin')}
+                                    <select n:inner-foreach="$centers as $center_id => $center_title" name="center_id[{$person->id}]">
+                                    	<option value="{$center_id}"{if $distribution && $center_id == $distribution['center_id']} selected{elseif $center_id == $person->center_id} selected{/if}>{$center_title}</option>
+									</select>
+									{else}
+										{$person->center->title}
+									{/if}
+                                </td>
+                                <td data-category="maha">{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
+                                <td data-category="big">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
+                                <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
+                                <td data-category="small">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
+                                <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
+                                <td data-category="points" data-value="{isset($book_points[$person->id]) ? $book_points[$person->id] : 'null'}">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
+    </div>
 {/block}
 {block scripts}
     <script src="{$basePath}/js/plugins/jeditable/jquery.jeditable.js"></script>
 
-    <!-- Data Tables -->
-    <script src="{$basePath}/js/plugins/dataTables/jquery.dataTables.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.bootstrap.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.responsive.js"></script>
-    <script src="{$basePath}/js/plugins/dataTables/dataTables.tableTools.min.js"></script>
-
     <!-- FooTable -->
-    <script src="{$basePath}/js/plugins/footable/footable.all.min.js"></script>
+    <script src="{$basePath}/js/plugins/footable2/footable.min.js"></script>    
 
     <!-- Date picker -->
     <script src="{$basePath}/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -157,21 +85,25 @@
             picker.setWeekPicker({$year}, {$week});
 
             picker.beforeSend(function() {
-                $('#resultsTable').fadeOut(); 
-                $('#fountainG').fadeIn();
+                $('#resultsTable').fadeOut();
+                $('#main_loading').fadeIn();
             });
 
             picker.afterReceive(function() {
-                $('#resultsTable').footable();
+                initFooTable('#resultsTable');
                 $('#resultsTable').hide();
-                generateScoreTableOrder('#resultsTable', 9);
                 $('#resultsTable').fadeIn();
-                $('#fountainG').fadeOut();
+                $('#main_loading').fadeOut();
             });
+            
+            if({$user->isInRole('superadmin')}) {
+                FooTable.CentersFiltering = createFooTableFilter('center', 'Všechna centra', {php echo json_encode($centers)});
+                FooTable.components.register('filtering', FooTable.CentersFiltering);
+            }
 
-            $('#resultsTable').footable();
-            generateScoreTableOrder('#resultsTable', 9);
+            initFooTable('#resultsTable');
 
+            $('#main_loading').fadeOut();
             //  ajaxvá obsluha uložení výsledků osoby
             $("#snippet--resultsTable").on("submit", "form", function(event) {
 	            var is_superadmin = {$user->isInRole('superadmin')};
@@ -206,6 +138,7 @@
                     },   
                     success: function(payload) {                   
                         $.nette.success(payload);
+                        console.log(payload);
                         if(!payload.error) {
                             var row = $('tr#person-' + payload.person_id);
                             row.find("td[data-category='maha']").html(payload.categories_points["Mahá"] ? payload.categories_points["Mahá"] : ".");
