--- a/app/templates/Result/resultsTablePrintout.latte
+++ b/app/templates/Result/resultsTablePrintout.latte
@@ -30,7 +30,7 @@
             {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
             <td></td>
             <td class="left ellipsis">{$person->name}</td>
-            <td class="left">{$distribution['center']}</td>
+            <td class="left">{$distribution['center_title']}</td>
             <td>{isset($weeks_distribution[$person->id]) ? $weeks_distribution[$person->id] : "."}</td>
             <td>{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
             <td>{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
