--- a/www/less/list.less
+++ b/www/less/list.less
@@ -16,6 +16,11 @@
 	td.bold {
 		font-weight: bold;
 	}
+	
+	td.td-selectable {
+		padding-top: 6px;
+		padding-bottom: 5px;
+	}
 
 	thead, tfood {
 		th {
