--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -26,7 +26,7 @@
                         </thead>
                         <tbody>
                             <tr n:foreach="$records as $record" data-id="{$record->id}" data-expand-url="{link expandRow, $record->id}">
-                                <td data-sort-value="{$record->name|webalize}">{$record->name}</td>
+                                <td data-sort-value="{$record->name|webalize}" data-filter-value="{$record->name|webalize, "", false}">{$record->name}</td>
                                 <td data-sort-value="{$record->center->title|webalize}" data-filter-value="{$record->center->id}">{$record->center->title}</td>
                                 <td data-sort-value="{$record->active}">
                                     <div class="switch active">
