--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,11 @@
 .row.padding-bottom {
   padding-bottom: 30px;
 }
+@media (max-width: 768px) {
+  .row .col-lg-12 {
+    padding: 0;
+  }
+}
 .nav-header .img-circle {
   width: 64px;
   height: 64px;
@@ -54,6 +59,11 @@ ol.breadcrumb li.active {
 }
 .ibox-content {
   min-height: 200px;
+}
+@media (max-width: 768px) {
+  .ibox-content {
+    overflow-x: scroll;
+  }
 }
 .modal-lg {
   width: 1000px;
@@ -207,6 +217,10 @@ textarea.form-control.import-source {
 }
 .footable td.bold {
   font-weight: bold;
+}
+.footable td.td-selectable {
+  padding-top: 6px;
+  padding-bottom: 5px;
 }
 .footable thead th,
 .footable tfood th {
