--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -13,7 +13,11 @@
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
                 <div class="ibox-title modified">
-    				<input id="week_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                    <div class="week-input-container">
+                        <button class="btn btn-white btn-left" type="button"><i class="fa fa-arrow-circle-left" aria-hidden="true"></i></button>
+    				    <input id="week_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
+                        <button class="btn btn-white btn-right" type="button"><i class="fa fa-arrow-circle-right" aria-hidden="true"></i></button>
+                    </div>
                 </div>
                 <div class="ibox-content relative" n:snippet="resultsTable">
                     {include ajax-loading}
