--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,9 +23,6 @@ ol.breadcrumb li.active {
 .page-heading.slim {
   height: 66px;
 }
-.nopadding-right {
-  padding-right: 0;
-}
 .main-ajax-spinner {
   opacity: 0;
   top: 5px;
@@ -38,6 +35,9 @@ ol.breadcrumb li.active {
 }
 .nopadding {
   padding: 0;
+}
+.nopadding-right {
+  padding-right: 0;
 }
 .relative {
   position: relative;
@@ -132,8 +132,12 @@ ol.breadcrumb li.active {
 label.error {
   margin-bottom: 0px;
 }
+.week-inputs-container {
+  padding-top: 0 !important;
+}
 .week-input-container {
   width: 328px;
+  margin-top: 10px;
   float: left;
 }
 .week-input-container .week-input {
@@ -147,11 +151,11 @@ label.error {
   padding-right: 5px;
 }
 .week-input-container .btn {
-  width: 40px;
+  width: 38px;
   height: 30px;
-  font-size: 18px;
+  font-size: 15px;
   margin-bottom: 0;
-  padding-top: 2px;
+  padding-top: 3px;
 }
 .week-input-container .btn.btn-left {
   border-radius: 3px 0 0 3px;
