--- a/www/less/forms.less
+++ b/www/less/forms.less
@@ -19,8 +19,13 @@ label.error {
 	margin-bottom: 0px;
 }
 
+.week-inputs-container {
+	padding-top: 0 !important;
+}
+
 .week-input-container {
 	width: 328px; 
+	margin-top: 10px;
 	float: left;
 	
 	.week-input {
@@ -36,11 +41,11 @@ label.error {
 	}
 
 	.btn {
-		width: 40px;
+		width: 38px; 
 		height: 30px;
-		font-size: 18px;
+		font-size: 15px;
 		margin-bottom: 0;
-		padding-top: 2px;
+		padding-top: 3px;
 
 		&.btn-left {
 			border-radius: 3px 0 0 3px;
